# tpark_cpp_chat

./: .gitignore  README.md
client/: .gitignore  CMakeLists.txt  README.md  client.cpp  client.h  main.cpp  messenger-window.cpp  messenger-window.h  messenger-window.ui
client/GUI/: CMakeLists.txt  MainMenu.qml  MainPage.qml  MenuIconLive.qml  MessengerWindow.qml  MyPage.qml  PageExample.qml  button.cpp  button.h  calculator.cpp  calculator.h  fonts.qrc  images.qrc  messenger-window.cpp  messenger-window.h  messenger-window.qml  qml.qrc  receiver.cpp  receiver.h
client/HttpClient/: CMakeLists.txt  client.cpp  client.h  main.cpp
doc/: all.json  all.txt  Схема базы данных.xml
server/: README.md
server/HttpServer/: CMakeLists.txt  Makefile  http_server  http_server.cpp  json_converter.cpp  json_converter.h  json_converter.hpp  main.cpp  server.cpp  server.h  server.hpp  structures.h
server/HttpServer/database_interaction/: database_interaction.cpp  database_interaction.hpp
server/Server/server/: CMakeLists.txt
server/sql/: database_schema.sql  схема базы данных.sql
